--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Frontend Mentor | GitHub user search app</title>
 
 	<link rel='icon' type='image/png' href='assets/favicon-32x32.png'>
 	<link rel='stylesheet' href='/global.css'>
